<resources>
    <string name="app_name">Mimi</string>
    <string name="app_title">Mimi</string>
    <string name="title_postitem_detail">PostItem Detail</string>
    <string name="custom_scroll_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="brown">Brown</string>
    <string name="blue_grey">Blue Grey</string>
    <string name="light_grey">Light Grey</string>
    <string name="grey">Grey</string>
    <string name="dark_grey">Dark Grey</string>
    <string name="black">Black</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="watched_threads">Watched Threads</string>
    <string name="edit_boards">Edit Boards</string>
    <string name="boards">Boards</string>
    <string name="settings">Settings</string>
    <string name="chanpass_login">Chanpass Login</string>
    <string name="chanpass_logout">Logout</string>
    <string name="manage_boards">Manage Boards</string>
    <string name="drawer_title">Mimi</string>
    <string name="bookmarks_tab">Bookmarks</string>
    <string name="history_tab">History</string>
    <string name="no_history_message">No history found</string>
    <string name="no_bookmarks_message">No bookmarks found</string>
    <string name="no_bookmarks">No Bookmarks</string>
    <string name="clear_all">Clear All</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure">Are you sure you want to sign out from 4chan pass?</string>
    <string name="gallery_menu_item">Gallery</string>
    <string name="report_menu_item">Report</string>
    <string name="reply_menu_item">Reply</string>
    <string name="quote_menu_item">Quote</string>
    <string name="claim_menu_item">Claim Post</string>
    <string name="unclaim_menu_item">Unclaim Post</string>
    <string name="watch_thread_menu_item">Watch Thread</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="close_tab">Close Tab</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="copy_text">Copy Text</string>
    <string name="add_board">Add Board</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="download">Download</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="invert">Invert</string>
    <string name="open_link_menu_item">Open Link</string>
    <string name="copy_link_menu_item">Copy Link</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">Select the dark or light theme</string>
    <string name="toolbar_color">Toolbar Color</string>
    <string name="toolbar_color_summary">Select toolbar color</string>
    <string name="layout_type">Layout Type</string>
    <string name="layout_type_summary">Select the layout type</string>
    <string name="board_order_title">Board Order</string>
    <string name="sort_by">Sort By</string>
    <string name="board_order_summary">How the boards are ordered</string>
    <string name="use_catalog_title">Use Catalog</string>
    <string name="use_fast_scroll">Use fast scroll</string>
    <string name="use_fast_scroll_summary">Quickly scroll to the bottom or top of a thread</string>
    <string name="user_catalog_summary_off">Individual pages</string>
    <string name="user_catalog_summary_on">Use the catalog</string>
    <string name="advanced_title">Advanced</string>
    <string name="advanced_summary">Extended Preferences</string>
    <string name="external_cache_title">External Cache</string>
    <string name="external_cache_summary_on">Cache saved on external storage</string>
    <string name="external_cache_summary_off">Cache saved on internal storage</string>
    <string name="prevent_screen_from_rotating">Prevent screen from rotating</string>
    <string name="prevent_screen_from_rotating_summary_on">Screen locked to portrait</string>
    <string name="prevent_screen_from_rotating_summary_off">Screen rotation unlocked</string>
    <string name="clear_cache_title">Clear Cache</string>
    <string name="clear_cache_summary">Clear the app cache</string>
    <string name="save_history_title">Save History</string>
    <string name="save_history_summary_off">History is not saved</string>
    <string name="save_history_summary_on">History is saved</string>
    <string name="auto_refresh_interval_title">Auto Refresh Interval</string>
    <string name="background_refresh_interval_title">Background Refresh Interval</string>
    <string name="notifications_title">Notifications</string>
    <string name="clear_history_title">Clear History</string>
    <string name="history_prune_time_title">Prune History</string>
    <string name="history_prune_time_summary">Every %s</string>
    <string name="more_info_about">About</string>
    <string name="more_info_website">MimiReader.com</string>
    <string name="more_info_privacy">Privacy Policy</string>
    <string name="more_info_licences">Licences</string>
    <string name="more_info_changelog">ChangeLog</string>
    <string name="more_info_version">Version</string>
    <string name="all_boards_visible">Show All Boards</string>
    <string name="image_file_location">Save Location</string>
    <string name="use_original_filename_title">Use Original Filename</string>
    <string name="use_original_filename_summary">Save files using the original filename</string>
    <string name="image_file_location_summary">Image save location</string>
    <string name="remember_thread_position_title">Remember thread position</string>
    <string name="remember_thread_position_summary">Pick up a thread where you left off</string>
    <string name="scroll_thread_with_gallery_title">Scroll thread with gallery</string>
    <string name="scroll_thread_with_gallery_summary">Swiping in the gallery scrolls the thread</string>
    <string name="close_gallery_on_click_title">Tap image to close gallery</string>
    <string name="disabled">Disabled</string>
    <string name="appearance_title">Appearance</string>
    <string name="appearance_summary">App appearance</string>
    <string name="general_title">General</string>
    <string name="general_summary">General Preferences</string>
    <string name="gallery_summary">Preferences for the gallery</string>
    <string name="history_title">History</string>
    <string name="history_summary">How and when history is saved</string>
    <string name="more_info_title">More Info</string>
    <string name="more_info_summary">Some more information about Mimi</string>
    <string name="posting_title">Posting</string>
    <string name="posting_summary">Posting Preferences</string>
    <string name="board_title">Board</string>
    <string name="board_summary">Board Preferences</string>
    <string name="debug_title">Debug</string>
    <string name="remove_ads_title">Remove Ads</string>
    <string name="enable_ads_title">Enable Ads</string>
    <string name="auto_refresh_disabled">Disabled</string>
    <string name="auto_refresh_5_seconds">5 Seconds</string>
    <string name="auto_refresh_10_seconds">10 Seconds</string>
    <string name="auto_refresh_20_seconds">20 Seconds</string>
    <string name="auto_refresh_30_seconds">30 Seconds</string>
    <string name="auto_refresh_60_seconds">60 Seconds</string>
    <string name="auto_refresh_2_minutes">2 Minutes</string>
    <string name="auto_refresh_5_minutes">5 Minutes</string>
    <string name="background_auto_refresh_disabled">Disabled</string>
    <string name="background_auto_refresh_1_minute">1 Minute</string>
    <string name="background_auto_refresh_2_minutes">2 Minutes</string>
    <string name="background_auto_refresh_5_minutes">5 Minutes</string>
    <string name="background_auto_refresh_10_minutes">10 Minutes</string>
    <string name="background_auto_refresh_30_minutes">30 Minutes</string>
    <string name="background_auto_refresh_60_minutes">60 Minutes</string>
    <string name="background_auto_refresh_90_minutes">90 Minutes</string>
    <string name="history_prune_time_start">App Start</string>
    <string name="history_prune_time_1_day">1 Day</string>
    <string name="history_prune_time_2_days">2 Days</string>
    <string name="history_prune_time_3_days">3 Days</string>
    <string name="http_buffer_size_title">Http Buffer Size</string>
    <string name="http_buffer_size_summary">Adjust the buffer size of each HTTP request</string>
    <string-array name="http_buffer_sizes">
        <item name="http_buffer_size_off">Default</item>
        <item name="http_buffer_size_512">512 Bytes</item>
        <item name="http_buffer_size_1k">1 KB</item>
        <item name="http_buffer_size_2k">2 KB</item>
        <item name="http_buffer_size_4k">4 KB</item>
    </string-array>
    <string name="board_order_none">None</string>
    <string name="board_order_board_title">Board Title</string>
    <string name="board_order_board_name">Board Name</string>
    <string name="board_order_access_count">Access Count</string>
    <string name="board_order_post_count">Post Count</string>
    <string name="board_order_last_access">Last Access</string>
    <string name="board_order_favorites">Favorites</string>
    <string name="board_order_custom">Custom</string>
    <string name="error_opening_url">Could not find browser to open URL</string>
    <string name="board_list_type">Board View Type</string>
    <string name="board_type_grid">Catalog</string>
    <string name="board_type_list">List</string>
    <string name="post">Post</string>
    <string name="comment">comment</string>
    <string name="name">Name</string>
    <string name="options">Options</string>
    <string name="subject">Subject</string>
    <string name="captcha">captcha</string>
    <string name="send">Send</string>
    <string name="sending">Sending...</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success!</string>
    <string name="just_now">Just now</string>
    <string name="error_fetching_captcha_image">Error fetching captcha image</string>
    <string name="clear_info">Clear</string>
    <string name="sage_info">Sage</string>
    <string name="gallery">Gallery</string>
    <string name="token_hint">token</string>
    <string name="pin_hint">pin</string>
    <string name="login_button">Login</string>
    <string name="ic_content_hidden">\uf29C</string>
    <string name="please_rate">Please take a moment to rate Mimi!</string>
    <string name="never">Never</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="list">List</string>
    <string name="sort">Sort</string>
    <string name="bump_time">Bump Time</string>
    <string name="thread_id">Thread ID</string>
    <string name="image_count">Image Count</string>
    <string name="reply_count">Reply Count</string>
    <string name="invert_sort">Invert Sort</string>
    <string name="quick_scroll_to_top">Scroll To Top</string>
    <string name="quick_scroll_to_bottom">Scroll To Bottom</string>
    <string name="text_to_filter">Text To Filter</string>
    <string name="regex">Regex</string>
    <string name="filter_name">Filter Name</string>
    <string name="edit">Edit</string>
</resources>