<!--
  ~ Copyright (c) 2016. Eli Connelly
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.emogoth.android.phone.mimi.prefs.GeneralPrefsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/general_summary"
        app:title="@string/general_title" />

    <Preference
        app:fragment="com.emogoth.android.phone.mimi.prefs.GalleryPrefsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/gallery_summary"
        app:title="@string/gallery" />

    <Preference
        app:fragment="com.emogoth.android.phone.mimi.prefs.AppearancePrefsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/appearance_summary"
        app:title="@string/appearance_title" />

    <Preference
        app:fragment="com.emogoth.android.phone.mimi.prefs.HistoryPrefsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/history_summary"
        app:title="@string/history_title" />

    <Preference
        app:fragment="com.emogoth.android.phone.mimi.prefs.AdvancedPrefsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/advanced_summary"
        app:title="@string/advanced_title" />

    <Preference
        app:fragment="com.emogoth.android.phone.mimi.prefs.MoreInfoPrefsFragment"
        app:iconSpaceReserved="false"
        app:summary="@string/more_info_summary"
        app:title="@string/more_info_title" />

    <!--<header app:fragment="com.emogoth.android.phone.mimi.prefs.PreferencesHC$PostingPrefsHCFragment"-->
    <!--app:title="Posting"-->
    <!--app:summary="Preferences for posting">-->
    <!--&lt;!&ndash; Arbitrary key/value pairs can be included with a header as-->
    <!--arguments to its fragment. &ndash;&gt;-->
    <!--<extra app:name="someKey" app:value="someHeaderValue" />-->
    <!--</header>-->
    <!---->
    <!--<header app:fragment="com.emogoth.android.phone.mimi.prefs.PreferencesHC$ThreadPrefsHCFragment"-->
    <!--app:title="Thread"-->
    <!--app:summary="Preferences for threads">-->
    <!--&lt;!&ndash; Arbitrary key/value pairs can be included with a header as-->
    <!--arguments to its fragment. &ndash;&gt;-->
    <!--<extra app:name="someKey" app:value="someHeaderValue" />-->
    <!--</header>-->


</PreferenceScreen>
