<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016. Eli Connelly
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/refresh_menu"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/layout_type"
        android:title="@string/layout_type"
        app:showAsAction="never">

        <menu>
            <group
                android:id="@+id/list_type_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/catalog_menu"
                    android:title="@string/catalog" />
                <item
                    android:id="@+id/list_menu"
                    android:title="@string/list" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/sort_menu"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:id="@+id/sort_type_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_default"
                    android:title="@string/bump_time" />

                <item
                    android:id="@+id/sort_time"
                    android:title="@string/thread_id" />

                <item
                    android:id="@+id/sort_image_count"
                    android:title="@string/image_count" />

                <item
                    android:id="@+id/sort_reply_count"
                    android:title="@string/reply_count" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/invert_sort_menu"
        android:title="@string/invert_sort"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never" />
</menu>