<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016. Eli Connelly
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mimi="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bookmark_menu"
        android:icon="@drawable/ic_bookmark_outline"
        android:title="@string/bookmark"
        mimi:showAsAction="always" />

    <item
        android:id="@+id/refresh_menu"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        mimi:showAsAction="always" />

    <item
        android:id="@+id/share_menu"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        mimi:showAsAction="always" />

    <item
        android:id="@+id/quick_top"
        android:title="@string/quick_scroll_to_top"
        mimi:showAsAction="never"/>

    <item
        android:id="@+id/quick_bottom"
        android:title="@string/quick_scroll_to_bottom"
        mimi:showAsAction="never"/>

</menu>