<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016. Eli Connelly
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    style="?rowItemBackground">

    <LinearLayout
        android:id="@+id/board_order_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:paddingLeft="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="?attr/font_medium"
            android:text="@string/board_order_title"/>
        <TextView
            android:id="@+id/board_order_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="?attr/font_small"
            android:text="@string/board_order_title"/>
    </LinearLayout>
        <com.emogoth.android.phone.mimi.view.IconTextView
            android:id="@+id/board_header_show_content"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/ic_content_hidden"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/board_order_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/board_order_type_favorite"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="?attr/font_label_small"
            android:gravity="center_vertical"
            android:text="@string/board_order_favorites"
            android:background="@drawable/thumbnail_selector"/>

        <TextView
            android:id="@+id/board_order_type_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="?attr/font_label_small"
            android:gravity="center_vertical"
            android:text="@string/board_order_board_name"
            android:background="@drawable/thumbnail_selector"/>

        <TextView
            android:id="@+id/board_order_type_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="?attr/font_label_small"
            android:gravity="center_vertical"
            android:text="@string/board_order_board_title"
            android:background="@drawable/thumbnail_selector"/>

        <TextView
            android:id="@+id/board_order_type_access_count"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="?attr/font_label_small"
            android:gravity="center_vertical"
            android:text="@string/board_order_access_count"
            android:background="@drawable/thumbnail_selector"/>

        <TextView
            android:id="@+id/board_order_type_post_count"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="?attr/font_label_small"
            android:gravity="center_vertical"
            android:text="@string/board_order_post_count"
            android:background="@drawable/thumbnail_selector"/>

        <TextView
            android:id="@+id/board_order_type_last_access"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="?attr/font_label_small"
            android:gravity="center_vertical"
            android:text="@string/board_order_last_access"
            android:background="@drawable/thumbnail_selector"/>

    </LinearLayout>

</LinearLayout>