<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016. Eli Connelly
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/token_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:hint="@string/token_hint" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/pin_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/pin_hint" />

        <TextView
            style="?basicButton"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

    </LinearLayout>

</FrameLayout>