<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Eli Connelly
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/app_rater_container"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:background="#87FF87"
        android:orientation="horizontal"
        android:divider="#227722"
        android:clickable="true"
        android:showDividers="middle"
        android:dividerPadding="12dip">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:textSize="?attr/font_small"
            android:textColor="#000000"
            android:text="@string/please_rate" />

        <TextView
            android:id="@+id/rate_now"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/app_rating_selector"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center"
            android:textSize="?attr/font_label_small"
            android:textColor="#222222"
            android:text="@string/rate" />

        <View
            android:layout_height="fill_parent"
            android:layout_width="1px"
            android:background="#90909090"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/separator1" />

        <TextView
            android:id="@+id/rate_later"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/app_rating_selector"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center"
            android:textSize="?attr/font_label_small"
            android:textColor="#222222"
            android:text="@string/later" />

        <View
            android:layout_height="fill_parent"
            android:layout_width="1px"
            android:background="#90909090"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/separator2" />

        <TextView
            android:id="@+id/rate_never"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/app_rating_selector"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center"
            android:textSize="?attr/font_label_small"
            android:textColor="#222222"
            android:text="@string/never" />

    </LinearLayout>

</FrameLayout>